# Khwarzmiatinst

./: .env.example  .gitignore  AGENTS.md  API.md  CLAUDE.md  DATABASE.md  DESIGN_GUIDE.md  FEATURES.md  INFRASTRUCTURE.md  PERMISSIONS.md  README.md  ROADMAP.md  TECH_STACK.md  TESTING.md  manage.py  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt  tailwind.config.js
.claude/: settings.local.json
apps/accounts/: admin.py  apps.py  factories.py  forms.py  managers.py  models.py  permissions.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_userprofile.py
apps/accounts/templates/account/: _form.html  login.html  logout_confirm.html  register.html
apps/accounts/tests/: test_forms.py  test_models.py  test_permissions.py  test_userprofile.py  test_views.py
apps/core/: admin.py  apps.py  context_processors.py  cpanel_routes.py  models.py  urls.py  validators.py  views.py
apps/core/management/commands/: sync_cpanel_routes.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/core/: home.html
apps/core/tests/: test_cpanel_routes.py  test_site_settings.py
apps/dashboard/: apps.py  decorators.py  forms.py  urls.py  views.py
apps/dashboard/tests/: test_package_edit.py  test_views.py
apps/landing/: apps.py  sitemaps.py  urls.py  views.py
apps/landing/tests/: test_views.py
apps/leads/: admin.py  apps.py  factories.py  forms.py  models.py  recaptcha.py  serializers.py  signals.py  urls.py  views.py
apps/leads/migrations/: 0001_initial.py  0002_statushistory.py
apps/leads/tests/: test_admin.py  test_api.py  test_forms.py  test_models.py  test_recaptcha.py  test_status_history.py  test_views.py
apps/notifications/: tasks.py  telegram.py
apps/notifications/tests/: test_signals.py  test_tasks.py  test_telegram.py
apps/profile/: api.py  api_urls.py  apps.py  decorators.py  forms.py  urls.py  views.py
apps/profile/tests/: test_api.py  test_views.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  cpanel.py  development.py  production.py
static/src/: input.css
static/videos/: hero-training.webm
templates/: base.html
tests/: conftest.py  test_smoke.py
tests/e2e/: conftest.py  test_auth_flow.py  test_dashboard_flow.py  test_visitor_flow.py
(+24 files in other folders)
