[project]
name = "khawarizmiat"
version = "0.1.0"
description = "خوارزميات — منصة الاشتراكات للمعاهد والمستثمرين في التعليم"
requires-python = ">=3.12"
authors = [
    { name = "Khawarizmiat Team" },
]

dependencies = [
    # Core
    "django>=5.1,<5.2",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-allauth>=64.0",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
    "dj-database-url>=2.2",

    # Static / Storage
    "whitenoise>=6.7",
    "cloudinary>=1.41",
    "django-cloudinary-storage>=0.3",

    # Validation
    "pydantic>=2.8",

    # Security
    "django-ratelimit>=4.1",
    "django-recaptcha>=4.0",
    "django-otp>=1.5",
    "qrcode>=7.4",

    # Async / Notifications
    "celery[redis]>=5.4",
    "redis>=5.0",

    # i18n / Locale
    "hijri-converter>=2.3",

    # Monitoring
    "sentry-sdk[django]>=2.13",

    # Server
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "playwright>=1.46",

    # Linting
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.0",
    "djlint>=1.34",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "migrations", "static"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "DJ", "PIE", "T20", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "migrations"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations/", ".venv/"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --tb=short --reuse-db"
testpaths = ["apps", "tests"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/admin.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
format_attribute_template_tags = true
